# mex-model

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  SECURITY.md  mex.bat  pyproject.toml  requirements.txt  setup.py  split-entities.py  test.md
.github/workflows/: cookiecutter.yml  cve-scan.yml  default.yml  documentation.yml  i18n.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  testing.yml
conceptual-model/: specification.md
docs/: conf.py  index.md  index.rst  swagger.json
mex/model/: __init__.py  build_release_zip.py
mex/model/entities/: __init__.py  access-platform.json  activity.json  bibliographic-reference  bibliographic-reference.json  bibliographic-resource.json  concept-scheme.json  concept.json  consent.json  contact-point.json  distribution.json  extracted-access-platform.json  extracted-activity.json  extracted-bibliographic-resource.json  extracted-consent.json  extracted-contact-point.json  extracted-distribution.json  extracted-location.json  extracted-organization.json  extracted-organizational-unit.json  extracted-person.json  extracted-primary-source.json  extracted-resource-series.json  extracted-resource.json  extracted-variable-group.json  extracted-variable.json  merged-access-platform.json  merged-activity.json  merged-bibliographic-resource.json  merged-consent.json  merged-contact-point.json  merged-distribution.json  merged-location.json  merged-organization.json  merged-organizational-unit.json  merged-person.json  merged-primary-source.json  merged-resource-series.json  merged-resource.json  merged-variable-group.json  (+8 more)
mex/model/extension/: definition.json
mex/model/fields/: __init__.py  identifier.json  link.json  text.json
mex/model/i18n/: de-DE.mo  de-DE.po  de.po  en-US.mo  en-US.po  en.po
mex/model/vocabularies/: __init__.py  access-restriction.json  activity-type.json  anonymization-pseudonymization.json  api-type.json  bibliographic-reference-type.json  bibliographic-resource-type.json  coding-system.json  concept-schemes.json  consent-status.json  consent-type.json  country.json  data-processing-state.json  data-type.json  datatype-standardized.json  frequency.json  geopolitical-resolution.json  health-category.json  language.json  license.json  mime-type.json  personal-data.json  purpose.json  resource-creation-method.json  resource-type-general.json  spatial-resolution.json  standard.json  technical-accessibility.json  theme.json
schema/entities/: access-platform.json  activity.json  concept-scheme.json  concept.json  contact-point.json  distribution.json  organization.json  organizational-unit.json  person.json  primary-source.json  resource.json  variable.json
schema/extension/: definition.json
schema/fields/: identifier.json  link.json  text.json
scripts/: build_release_zip.py  build_schema_zip.py  split_entities.py
tests/: test_main.py
